add delete list functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
-<div class="todo-lists">
-<app-todo-list></app-todo-list>
+
+<div *ngIf="(todo === false) && (title === false) && todoListButtonState" class="add-todo-list">
+    <button (click)="addTodoList()" type="button">
+        <label for="add-todo">
+            <span class="todo-list__input--plus">
+              <svg class="icon">
+                <use xlink:href="../assets/icons/sprite.svg#icon-plus"></use>
+              </svg>
+            </span>
+        </label>
+        Add TODO List
+    </button>
 </div>
+
+<app-todo-list 
+    *ngIf="((todo === true) ||
+    (title === true)) ||
+    !todoListButtonState"
+    (listState)=" addTodoList($event)"
+>
+</app-todo-list>
