--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -23,7 +23,7 @@
         </label>
       </span>
       <span class="todo-list___header-controls--delete">
-        <svg (click)="onDeleteTitle()" class="icon">
+        <svg (click)="onDeleteList()" class="icon">
           <use xlink:href="../assets/icons/sprite.svg#icon-bin"></use>
         </svg>
       </span>
