--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,29 @@
-// .todo-lists {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-// }
+ .add-todo-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3rem;
+
+    button {
+       background: linear-gradient(#6e9ef8, #5979b4);
+       min-height: 4rem;
+       display: flex;
+       justify-content: space-between;
+       align-items: center;
+       padding: 1rem 2rem; 
+       cursor: pointer;
+       border: none;
+       color: #fff;
+       font-weight: 600;
+       font-size: medium;;
+    
+        .icon {
+            width: 2rem;
+            height: 2rem;
+            cursor: pointer;
+            margin-right: 1rem;
+          }
+    }
+ }
+
+
